[package]
name = "RUST_ACTIX"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.214"
serde_json = "1.0.132"
env_logger = "0.11.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
chrono = "0.4.38"
sea-orm = {version = "0.12", features = ["sqlx-postgres","macros","runtime-tokio-rustls"]}